--- a/src/Board.css
+++ b/src/Board.css
@@ -1,3 +1,13 @@
 .Board {
   margin: 0 auto;
+  max-width: 95vw;
+
+
 }
+
+/* @media (max-width: 600px) {
+  .Board {
+    max-height: 400px;
+  }
+
+} */
